--- a/css/styles.css
+++ b/css/styles.css
@@ -98,6 +98,13 @@ body {
 /* End of Intro / About Me */
 
 
+/* Featured Projects */
+.bi-stars {
+    color: aqua;
+}
+/* End of Featured Projects */
+
+
 /* Footer */
 .fa-brands {
     color: aqua;
