--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ body {
 
 /* Navbar */
 .navbar {
-    background-color: rgba(0,0,0,0.8);
+    background-color: rgba(0, 0, 0, 0.8);
 }
 
 .nav-link {
@@ -54,7 +54,7 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    background: linear-gradient(rgba(0,0,0,0.95), rgba(0,0,0,0.85)), url("../img/black-sand.jpg");
+    background: linear-gradient(rgba(0, 0, 0, 0.95), rgba(0, 0, 0, 0.85)), url("../img/black-sand.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -129,6 +129,26 @@ body {
     text-decoration-color: aqua;
 }
 /* End of Footer */
+
+
+/* Contact Page */
+.contact-form {
+    background: rgba(0, 0, 0, 0.9);
+}
+
+.form-background {
+    background: rgba(4, 205, 255, 0.527);
+    /* background: linear-gradient(to bottom, rgba(36, 193, 255, 0.493), #0dcaf0, rgba(0, 0, 0, 0.9)); */
+    border: 2px solid #0dcaf0;
+    border-radius: 5px;
+    
+}
+
+.input-group-text, .form-control {
+    border-color: black;
+    border-width: px;
+}
+/* End of Contact Page */
 
 
 /* Media Queries */
