--- a/css/styles.css
+++ b/css/styles.css
@@ -131,6 +131,21 @@ body {
 /* End of Footer */
 
 
+/* About Page */
+.hero-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/black-sand.jpg");
+    height: 400px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+/* End of Projects Page */
+
+
+/* Projects Page */
+/* End of Projects Page */
+
+
 /* Contact Page */
 .contact-form {
     background: rgba(0, 0, 0, 0.9);
@@ -139,9 +154,8 @@ body {
 .form-background {
     background: rgba(4, 205, 255, 0.527);
     /* background: linear-gradient(to bottom, rgba(36, 193, 255, 0.493), #0dcaf0, rgba(0, 0, 0, 0.9)); */
-    border: 2px solid #0dcaf0;
+    border: 2px dotted aquamarine;
     border-radius: 5px;
-    
 }
 
 .input-group-text, .form-control {
