--- a/css/styles.css
+++ b/css/styles.css
@@ -174,6 +174,15 @@ footer p {
 
 
 /* Projects Page */
+.class-title {
+    height: 40vh;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url("../img/waves.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
 .projects:hover {
     box-shadow: 4px 4px 15px 3px black;
     transition: 0.3s ease;
