Added an Outro to Home Page - customized on CSS. Made all Buttons text Upper Case on all Pages. Minor Text changes on second paragraph of About Page and also on Projects Page Intro.

--- a/css/styles.css
+++ b/css/styles.css
@@ -138,6 +138,17 @@ h2 {
 /* End of Featured Projects */
 
 
+/* Outro */
+.outro {
+    background-color: rgba(127, 255, 212, 0.384);
+}
+
+.outro-stars {
+    color: white;
+}
+/* End of Outro */
+
+
 /* Footer */
 footer p {
     font-family: 'Yeseva One', cursive;
