change font size on nav brand and ps-3 added on it on all pages

--- a/css/styles.css
+++ b/css/styles.css
@@ -37,8 +37,13 @@ h2 {
 }
 
 .nav-brand {
+    font-size: 18px;
     font-family: 'Yeseva One', cursive;
 }
+
+    /* .tags {
+        color: aqua;
+    } */
 
 .nav-link {
     position: relative;  /* places to the right under nav links only */
